--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <form id="signupForm">
     <div>
-      <label for="firstName">Prénom</label>
+      <label for="firstName">Prénoms</label>
       <input type="text" id="firstName" required>
       <div class="error" id="errorFirstName"></div>
     </div>
